# pypdown

./: .pre-commit-config.yaml  README.md  demo.py  demo2.py  mkdocs.yml  pyproject.toml  run.py  vercel.json
.github/workflows/: ci.yml
docs/: api_reference.md  index.md  usage.md
docs/api/: index.md
docs/usage/: index.md
docs/vercel/: deploy.sh
examples/: large_step.py  small_step.py
src/pypdown/: __init__.py  models.py  run.py
tests/: long_test.py  package_test.py  simple_test.py
